--- a/.chezmoiscripts/run_onchange_aptfile.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_aptfile.sh.tmpl
@@ -4,6 +4,7 @@ source {{ joinPath .chezmoi.sourceDir "src/aptfile.bash" }}
 
 # Repositories
 apt_repository "docker" "https://download.docker.com/linux/ubuntu" "{{ .chezmoi.osRelease.ubuntuCodename }} stable" "{{ .chezmoi.arch }}" "https://download.docker.com/linux/ubuntu/gpg"
+apt_repository "github_cli" "https://cli.github.com/packages" "stable main" "" "https://cli.github.com/packages/githubcli-archive-keyring.gpg"
 apt_repository "hashicorp" "https://apt.releases.hashicorp.com" "{{ .chezmoi.osRelease.ubuntuCodename }} main" "{{ .chezmoi.arch }}" "https://apt.releases.hashicorp.com/gpg"
 apt_repository "kubernetes" "https://pkgs.k8s.io/core:/stable:/v1.29/deb/" "/" "" "https://pkgs.k8s.io/core:/stable:/v1.29/deb/Release.key"
 {{ if .work -}}
@@ -14,7 +15,8 @@ apt_repository "vscode" "https://packages.microsoft.com/repos/code" "stable main
 # Development
 package "code"
 packagelist "docker-ce" "docker-ce-cli"
-package "git" "git-crypt"
+package "gh"
+packagelist "git" "git-crypt"
 package "kubectl"
 package "openssh-client"
 package "terraform"
