--- a/.chezmoiscripts/run_onchange_aptfile.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_aptfile.sh.tmpl
@@ -63,3 +63,5 @@ package "retry"
 package "tree"
 package "wget"
 package "yubikey-manager"
+
+# TODO: https://docs.aws.amazon.com/systems-manager/latest/userguide/install-plugin-debian-and-ubuntu.html
