--- a/dot_bash_completion.tmpl
+++ b/dot_bash_completion.tmpl
@@ -7,6 +7,10 @@ if command_exists aws; then
   complete -C /snap/aws-cli/current/bin/aws_completer aws
 fi
 
+if command_exists circleci; then
+  source <(circleci completion bash)
+fi
+
 if command_exists kubectl; then
   source <(kubectl completion bash)
 fi
