Workaround `latticectl` being slow
```
± time latticectl --completion-script-bash

_latticectl_bash_autocomplete() {
    local cur prev opts base
    COMPREPLY=()
    cur="${COMP_WORDS[COMP_CWORD]}"
    opts=$( ${COMP_WORDS[0]} --completion-bash ${COMP_WORDS[@]:1:$COMP_CWORD} )
    COMPREPLY=( $(compgen -W "${opts}" -- ${cur}) )
    return 0
}
complete -F _latticectl_bash_autocomplete latticectl

real	0m4.266s
user	0m0.378s
sys	0m0.093s
```

--- a/dot_bash_completion.tmpl
+++ b/dot_bash_completion.tmpl
@@ -15,9 +15,10 @@ if command_exists kubectl; then
   source <(kubectl completion bash)
 fi
 
-if command_exists latticectl; then
-  source <(latticectl --completion-script-bash)
-fi
+{{/* TODO: Do this at runtime instead. */ -}}
+{{ if lookPath "latticectl" -}}
+{{ output "latticectl" "--completion-script-bash" -}}
+{{ end -}}
 
 if command_exists terraform; then
   complete -C terraform terraform
