--- a/.chezmoiscripts/run_onchange_aptfile.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_aptfile.sh.tmpl
@@ -3,6 +3,9 @@
 source {{ joinPath .chezmoi.sourceDir "src/aptfile.bash" }}
 
 # Repositories
+{{ if .work -}}
+apt_repository "1password" "https://downloads.1password.com/{{ .chezmoi.os }}/{{ .chezmoi.osRelease.idLike }}/{{ .chezmoi.arch }}" "stable main" "{{ .chezmoi.arch }}" "https://downloads.1password.com/linux/keys/1password.asc"
+{{ end -}}
 apt_repository "docker" "https://download.docker.com/linux/ubuntu" "{{ .chezmoi.osRelease.ubuntuCodename }} stable" "{{ .chezmoi.arch }}" "https://download.docker.com/linux/ubuntu/gpg"
 apt_repository "github_cli" "https://cli.github.com/packages" "stable main" "" "https://cli.github.com/packages/githubcli-archive-keyring.gpg"
 apt_repository "hashicorp" "https://apt.releases.hashicorp.com" "{{ .chezmoi.osRelease.ubuntuCodename }} main" "{{ .chezmoi.arch }}" "https://apt.releases.hashicorp.com/gpg"
@@ -51,6 +54,9 @@ package "nix-bin"
 packagelist "python3" "python3-virtualenv"
 
 # Utility
+{{ if .work -}}
+package "1password"
+{{- end }}
 package "curl"
 package_from_url "google-chrome-stable" "https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb"
 packagelist "gnome-shell-extensions" "gnome-tweaks"
