--- a/.chezmoiignore.tmpl
+++ b/.chezmoiignore.tmpl
@@ -1,3 +1,9 @@
+{{ if .work -}}
+/.1password/agent.sock
+/.GlobalProtect/
+{{ end -}}
+/.aws/cli/cache/
+/.aws/sso/cache/
 /.cache/
 /.config/chezmoi/
 /.config/dconf/
