Add to `.chezmoiignore`

--- a/.chezmoiignore.tmpl
+++ b/.chezmoiignore.tmpl
@@ -65,6 +65,9 @@
 /.GlobalProtect/
 /GP_HTML/
 {{ else }}
+/.aws/config
+/.chezmoiscripts/anduril.sh
+/.ssh/conf.d/lattice.conf
 /.ssh/conf.d/teleport.conf
 /.ssh/conf.d/work.conf
 {{ end -}}
