Don't install `circleci` in personal

--- a/.chezmoiignore.tmpl
+++ b/.chezmoiignore.tmpl
@@ -67,6 +67,7 @@
 {{ else }}
 /.aws/config
 /.chezmoiscripts/anduril.sh
+/.local/bin/circleci
 /.ssh/conf.d/lattice.conf
 /.ssh/conf.d/teleport.conf
 /.ssh/conf.d/work.conf
