--- a/.chezmoiscripts/run_onchange_after_aptfile.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_aptfile.sh.tmpl
@@ -29,12 +29,13 @@ package "terraform"
 package "vim"
 package "xclip"
 
-# Hardware
 {{ if and (eq (output "cat" "/sys/devices/virtual/dmi/id/sys_vendor" | trim) "Dell Inc.") (eq (output "cat" "/sys/devices/virtual/dmi/id/product_name" | trim) "Precision 5680") -}}
+# Hardware
 # See https://wiki.ubuntu.com/IntelMIPICamera.
 packagelist "linux-modules-ipu6-generic-hwe-{{ .chezmoi.osRelease.versionID }}" "linux-modules-ivsc-generic-hwe-{{ .chezmoi.osRelease.versionID }}"
 package "v4l2-relayd"
-{{- end }}
+
+{{ end -}}
 
 # Networking
 {{ if .work -}}
