--- a/.chezmoiscripts/run_onchange_after_aptfile.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_aptfile.sh.tmpl
@@ -10,7 +10,11 @@ apt_repository "1password" "https://downloads.1password.com/{{ .chezmoi.os }}/{{
 apt_repository "docker" "https://download.docker.com/linux/ubuntu" "{{ .chezmoi.osRelease.ubuntuCodename }} stable" "{{ .chezmoi.arch }}" "https://download.docker.com/linux/ubuntu/gpg"
 apt_repository "github_cli" "https://cli.github.com/packages" "stable main" "" "https://cli.github.com/packages/githubcli-archive-keyring.gpg"
 apt_repository "helm" "https://baltocdn.com/helm/stable/debian/" "all main" "" "https://baltocdn.com/helm/signing.asc"
+{{ if ne .chezmoi.osRelease.ubuntuCodename "noble" -}}
 apt_repository "hashicorp" "https://apt.releases.hashicorp.com" "{{ .chezmoi.osRelease.ubuntuCodename }} main" "{{ .chezmoi.arch }}" "https://apt.releases.hashicorp.com/gpg"
+{{ else -}}
+apt_repository "hashicorp" "https://apt.releases.hashicorp.com" "jammy main" "{{ .chezmoi.arch }}" "https://apt.releases.hashicorp.com/gpg"
+{{ end -}}
 apt_repository "kubernetes" "https://pkgs.k8s.io/core:/stable:/v1.29/deb/" "/" "" "https://pkgs.k8s.io/core:/stable:/v1.29/deb/Release.key"
 {{ if .work -}}
 apt_repository "teleport" "https://apt.releases.teleport.dev/ubuntu" "{{ .chezmoi.osRelease.ubuntuCodename }} stable/v11" "" "https://apt.releases.teleport.dev/gpg"
@@ -50,7 +54,9 @@ package "traceroute"
 package "whois"
 
 # Programming
+{{ if ne .chezmoi.osRelease.ubuntuCodename "noble" -}}
 ppa "longsleep/golang-backports"
+{{- end }}
 package "golang-go"
 {{ if .work -}}
 package "nix-bin"
