Only install `latticectl` in work profile

--- a/.chezmoiignore.tmpl
+++ b/.chezmoiignore.tmpl
@@ -67,6 +67,7 @@
 {{ else }}
 /.aws/config
 /.local/bin/circleci
+/.local/bin/latticectl
 /.ssh/conf.d/lattice.conf
 /.ssh/conf.d/teleport.conf
 /.ssh/conf.d/work.conf
