Don't run `.chezmoiscripts/ip-route.sh` on non-work profiles

--- a/.chezmoiignore.tmpl
+++ b/.chezmoiignore.tmpl
@@ -66,6 +66,7 @@
 /GP_HTML/
 {{ else }}
 /.aws/config
+/.chezmoiscripts/ip-route.sh
 /.local/bin/circleci
 /.local/bin/latticectl
 /.ssh/conf.d/lattice.conf
