Remove unneccessary use of `sudo`

--- a/.chezmoiscripts/run_onchange_snap.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_snap.sh.tmpl
@@ -1,4 +1,5 @@
-#!/bin/bash
+#!{{ if ne .chezmoi.username "root" -}} {{ lookPath "sudo" }} {{ end -}} {{ lookPath "bash" }}
+# shellcheck shell=bash
 
 set -o errexit
 set -o nounset
