--- a/.chezmoi.yaml.tmpl
+++ b/.chezmoi.yaml.tmpl
@@ -1,20 +1,9 @@
-{{ $headless := false -}}
-{{ $personal := false -}}
-{{ $work := false -}}
-
-{{ if eq .chezmoi.username "jspence" -}}
-{{   $work = true -}}
-{{ end -}}
-
-{{ if env "GITHUB_ACTIONS" -}}
-{{   $headless = true -}}
-{{ end -}}
 ---
 age:
   identity: '~/.config/chezmoi/age.key'
   recipient: 'age128dedd8uzyxfd3ehp2ghyu6htssk4guuwh883ccljzsac2s67afsxtaqwz'
 data:
-  headless: {{ $headless }}
-  personal: {{ $personal }}
-  work: {{ $work }}
+  headless: {{ env "GITHUB_ACTIONS" | empty | not }}
+  personal: {{ promptBoolOnce . "personal" "Enable personal profile?" false }}
+  work: {{ promptBoolOnce . "work" "Enable work profile?" false }}
 encryption: 'age'
