--- a/.chezmoiscripts/run_onchange_after_aptfile.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_aptfile.sh.tmpl
@@ -64,7 +64,7 @@ package "golang-go"
 {{ if .work -}}
 package "nix-bin"
 {{- end }}
-packagelist "python3" "python3-virtualenv"
+packagelist "python3" "python3-virtualenv" "pipx"
 
 # Utility
 {{ if .work -}}
