--- a/dot_bash_completion.tmpl
+++ b/dot_bash_completion.tmpl
@@ -41,3 +41,7 @@ fi
 if command_exists tsh; then
   source <(tsh --completion-script-bash)
 fi
+
+if command_exists yq; then
+  source <(yq shell-completion bash)
+fi
