--- a/.chezmoi.yaml.tmpl
+++ b/.chezmoi.yaml.tmpl
@@ -4,6 +4,7 @@ age:
   recipient: 'age128dedd8uzyxfd3ehp2ghyu6htssk4guuwh883ccljzsac2s67afsxtaqwz'
 data:
   headless: {{ env "GITHUB_ACTIONS" | empty | not }}
+  laptop: {{ eq (output "hostnamectl" "chassis" | trim) "laptop" }}
   personal: {{ promptBoolOnce . "personal" "Enable personal profile?" false }}
   work: {{ promptBoolOnce . "work" "Enable work profile?" false }}
 encryption: 'age'
