--- a/.chezmoiscripts/run_onchange_after_aptfile.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_aptfile.sh.tmpl
@@ -82,5 +82,8 @@ packagelist "remmina" "remmina-plugin-vnc"
 package "rename"
 package "retry"
 package "tree"
+{{ if .personal -}}
+package "vlc"
+{{- end }}
 package "wget"
 package "yubikey-manager"
