Install `step` CLI

--- a/.chezmoiignore.tmpl
+++ b/.chezmoiignore.tmpl
@@ -76,6 +76,7 @@
 /.chezmoiscripts/ip-route.sh
 /.local/bin/circleci
 /.local/bin/latticectl
+/.local/bin/step
 /.ssh/conf.d/lattice.conf
 /.ssh/conf.d/teleport.conf
 /.ssh/conf.d/work.conf
