--- a/dot_bash_completion.tmpl
+++ b/dot_bash_completion.tmpl
@@ -33,6 +33,10 @@ if command_exists pipx; then
   source <(register-python-argcomplete3 pipx)
 fi
 
+if command_exists step; then
+  source <(step completion bash)
+fi
+
 if command_exists terraform; then
   complete -C terraform terraform
 fi
