--- a/.chezmoiscripts/run_onchange_after_aptfile.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_aptfile.sh.tmpl
@@ -60,7 +60,7 @@ package "golang-go"
 {{ if .work -}}
 package "nix-bin"
 {{- end }}
-packagelist "python3" "python3-virtualenv" "pipx"
+packagelist "python3" "python3-argcomplete" "python3-virtualenv" "pipx"
 
 # Utility
 {{ if .work -}}
