Install `git-lfs`

--- a/.chezmoiscripts/run_onchange_after_aptfile.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_aptfile.sh.tmpl
@@ -24,7 +24,7 @@ apt_repository "vscode" "https://packages.microsoft.com/repos/code" "stable main
 package "code"
 packagelist "docker-ce" "docker-ce-cli"
 package "gh"
-packagelist "git" "git-crypt"
+packagelist "git" "git-crypt" "git-lfs"
 package "helm"
 package "kubectl"
 package "openssh-client"
