--- a/.chezmoiscripts/run_onchange_after_aptfile.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_aptfile.sh.tmpl
@@ -29,6 +29,7 @@ package "helm"
 package "kubectl"
 package "openssh-client"
 package "terraform"
+package "tmux"
 package "vim"
 package "xclip"
 
@@ -65,10 +66,13 @@ packagelist "python3" "python3-argcomplete" "python3-virtualenv" "pipx"
 {{ if .work -}}
 package "1password"
 {{- end }}
+package "bat"
 package "curl"
 {{ if .personal -}}
 package "dropbox"
 {{ end -}}
+package "fd-find"
+package "fzf"
 package_from_url "google-chrome-stable" "https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb"
 packagelist "gnome-shell-extensions" "gnome-tweaks"
 package "htop"
