Install HCL extension

--- a/.chezmoiscripts/run_onchange_after_vscode.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_vscode.sh.tmpl
@@ -7,6 +7,7 @@ set -o pipefail
 {{
   $extensions := list
     "golang.go"
+    "HashiCorp.HCL"
     "hashicorp.terraform"
     "ms-azuretools.vscode-docker"
     "ms-vscode-remote.remote-containers"
