Ignore `~/.config/go/telemetry`

--- a/.chezmoiignore.tmpl
+++ b/.chezmoiignore.tmpl
@@ -9,6 +9,7 @@
 /.config/dconf/
 /.config/evolution/
 /.config/goa-1.0/
+/.config/go/telemetry/
 /.config/gnome-initial-setup-done
 /.config/gnome-session/
 /.config/ibus/
