--- a/.chezmoiscripts/run_onchange_after_vscode.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_vscode.sh.tmpl
@@ -10,6 +10,7 @@ set -o pipefail
     "HashiCorp.HCL"
     "hashicorp.terraform"
     "ms-azuretools.vscode-docker"
+    "ms-python.python"
     "ms-vscode-remote.remote-containers"
     "ms-vscode-remote.remote-ssh"
     "ms-vscode-remote.remote-ssh-edit"
