--- a/.chezmoiscripts/run_onchange_after_aptfile.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_aptfile.sh.tmpl
@@ -15,6 +15,7 @@ apt_repository "github_cli" "https://cli.github.com/packages" "stable main" "" "
 apt_repository "helm" "https://baltocdn.com/helm/stable/debian/" "all main" "" "https://baltocdn.com/helm/signing.asc"
 apt_repository "hashicorp" "https://apt.releases.hashicorp.com" "{{ .chezmoi.osRelease.ubuntuCodename }} main" "{{ .chezmoi.arch }}" "https://apt.releases.hashicorp.com/gpg"
 apt_repository "kubernetes" "https://pkgs.k8s.io/core:/stable:/v1.29/deb/" "/" "" "https://pkgs.k8s.io/core:/stable:/v1.29/deb/Release.key"
+apt_repository "speedtest" "https://packagecloud.io/ookla/speedtest-cli/ubuntu" "{{ .chezmoi.osRelease.ubuntuCodename }} main" "" "https://packagecloud.io/ookla/speedtest-cli/gpgkey"
 {{ if .work -}}
 apt_repository "teleport" "https://apt.releases.teleport.dev/ubuntu" "{{ .chezmoi.osRelease.ubuntuCodename }} stable/v13" "" "https://apt.releases.teleport.dev/gpg"
 {{- end }}
@@ -45,6 +46,7 @@ package "v4l2-relayd"
 
 # Networking
 package "nmap"
+package "speedtest-cli"
 package "tcpdump"
 {{ if .work -}}
 package "teleport"
