--- a/.chezmoiscripts/run_onchange_after_aptfile.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_aptfile.sh.tmpl
@@ -33,7 +33,7 @@ packagelist "git" "git-crypt" "git-lfs"
 package "helm"
 package "kubectl"
 package "openssh-client"
-package "terraform"
+packagelist "packer" "terraform"
 package "tmux"
 package "vim"
 package "xclip"
