Only install `gh-es` on work profile

--- a/.chezmoiscripts/run_onchange_after_gh.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_gh.sh.tmpl
@@ -6,8 +6,14 @@ set -o pipefail
 
 {{
   $extensions := list
-    "github.com/github/gh-es"
 -}}
+{{ if .work -}}
+{{
+  $extensions = concat $extensions (list
+    "github.com/github/gh-es"
+  )
+-}}
+{{ end -}}
 
 {{ range $extensions -}}
 gh extension install {{ . }}
