Install `yubikey-manager-qt`

--- a/.chezmoiscripts/run_onchange_after_aptfile.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_aptfile.sh.tmpl
@@ -98,4 +98,4 @@ package "tree"
 package "vlc"
 {{- end }}
 package "wget"
-package "yubikey-manager"
+packagelist "yubikey-manager" "yubikey-manager-qt"
