Install `pamu2fcfg`

--- a/.chezmoiscripts/run_onchange_after_aptfile.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_aptfile.sh.tmpl
@@ -98,4 +98,4 @@ package "tree"
 package "vlc"
 {{- end }}
 package "wget"
-packagelist "yubikey-manager" "yubikey-manager-qt"
+packagelist "yubikey-manager" "yubikey-manager-qt" "pamu2fcfg"
