--- a/dot_config/gtk-3.0/bookmarks.tmpl
+++ b/dot_config/gtk-3.0/bookmarks.tmpl
@@ -1,4 +1,5 @@
 {{ if .personal -}}
+file://{{ .chezmoi.homeDir }}/Dropbox/3D%20Printing/Models 3D Printing
 file://{{ .chezmoi.homeDir }}/Dropbox Dropbox
 {{- end }}
 file://{{ .chezmoi.homeDir }}/workspace Workspace
