Install `terraform-stacks-cli`

--- a/.chezmoiscripts/run_onchange_after_aptfile.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_aptfile.sh.tmpl
@@ -35,7 +35,7 @@ package "jfrog-cli-v2"
 {{- end }}
 package "kubectl"
 package "openssh-client"
-packagelist "packer" "terraform"
+packagelist "packer" "terraform" "terraform-stacks-cli"
 {{ if .personal -}}
 package "rpi-imager"
 {{- end }}
