--- a/.chezmoiignore.tmpl
+++ b/.chezmoiignore.tmpl
@@ -80,6 +80,7 @@
 /.aws/config
 /.chezmoiscripts/ip-route.sh
 /.local/bin/circleci
+/.local/bin/jira
 /.local/bin/latticectl
 /.local/bin/step
 /.ssh/conf.d/lattice.conf
