--- a/.chezmoiignore.tmpl
+++ b/.chezmoiignore.tmpl
@@ -89,8 +89,9 @@
 {{ end -}}
 
 {{ if not .personal -}}
-/.local/bin/UltiMaker-Cura.AppImage
+/.local/bin/Ultimaker-Cura
 /.local/share/applications/com.ultimaker.cura.desktop
+/.local/share/icons/hicolor/256x256/apps/ultimaker-cura.png
 {{ end -}}
 
 # Temporary
