--- a/.chezmoiscripts/run_onchange_after_aptfile.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_aptfile.sh.tmpl
@@ -66,7 +66,7 @@ package "whois"
 
 # Programming
 package "golang-go"
-packagelist "python3" "python3-argcomplete" "python3-virtualenv" "pipx"
+packagelist "python3" "python3-argcomplete" "python3-virtualenv" "python3-venv" "pipx"
 
 # Utility
 {{ if .work -}}
