--- a/.chezmoiscripts/run_onchange_after_gnome-extensions.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_gnome-extensions.sh.tmpl
@@ -4,6 +4,9 @@ set -o errexit
 set -o nounset
 set -o pipefail
 
+{{ include "shell/helpers.sh"
+{{ include "shell/environment/path.sh" }}
+
 {{
   $extensions := list
     "nightthemeswitcher@romainvigier.fr"
