--- a/.chezmoiignore.tmpl
+++ b/.chezmoiignore.tmpl
@@ -96,5 +96,6 @@
 
 # Temporary
 {{ if env "CI" -}}
-/.chezmoiscripts/vscode.sh
+/.chezmoiscripts/50_dconf.sh
+/.chezmoiscripts/70_gnome-extensions.sh
 {{ end -}}
