--- a/.chezmoiscripts/run_onchange_after_10_aptfile.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_10_aptfile.sh.tmpl
@@ -54,6 +54,9 @@ packagelist "gstreamer1.0-icamera" "v4l-utils" "v4l2-relayd" "v4l2loopback-dkms"
 
 {{ end -}}
 
+# Miscellaneous
+packagelist "libcairo2-dev" "libgirepository1.0-dev" # build dependencies for `pygobject`
+
 # Networking
 package "nmap"
 package "speedtest-cli"
