--- a/.chezmoiscripts/run_onchange_after_50_vscode.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_50_vscode.sh.tmpl
@@ -38,5 +38,5 @@ set -o pipefail
 {{ end -}}
 
 {{ range $extension := $extensions | sortAlpha -}}
-code --force --install-extension {{ $extension }}
+code {{ if env "CI" -}} --no-sandbox --user-data-dir ~/.config/Code {{ end -}} --force --install-extension {{ $extension }}
 {{ end -}}
