Ensure `$PATH` is set in scripts (#40)
* Ensure `$PATH` is set in scripts

* Update run_onchange_after_gnome-extensions.sh.tmpl

--- a/.chezmoiscripts/run_onchange_after_50_virtualenv.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_50_virtualenv.sh.tmpl
@@ -8,6 +8,7 @@ set -o errexit
 set -o nounset
 set -o pipefail
 
+{{ include "shell/environment/path.sh" }}
 test -d .venv/bin || python3 -m venv .venv
 command -v pip-sync &>/dev/null || pip install --constraint .venv/requirements.in --quiet pip-tools
 pip-compile --upgrade --output-file .venv/requirements.txt --config .config/pip-tools.toml .venv/requirements.in
