--- a/.chezmoiignore.tmpl
+++ b/.chezmoiignore.tmpl
@@ -82,6 +82,7 @@
 /.local/bin/circleci
 /.local/bin/jira
 /.local/bin/latticectl
+/.local/bin/sieclient
 /.local/bin/step
 /.ssh/conf.d/lattice.conf
 /.ssh/conf.d/teleport.conf
