--- a/.chezmoiscripts/run_onchange_after_10_aptfile.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_10_aptfile.sh.tmpl
@@ -26,7 +26,7 @@ apt_repository "vscode" "https://packages.microsoft.com/repos/code" "stable main
 
 # Development
 package "code"
-packagelist "docker-ce" "docker-ce-cli"
+packagelist "docker-ce" "docker-ce-cli" "golang-docker-credential-helpers"
 package "gh"
 packagelist "git" "git-crypt" "git-lfs"
 package "helm"
@@ -90,6 +90,7 @@ package "htop"
 package "jq"
 package "meld"
 package "parallel"
+package "pass"
 {{ if .work -}}
 packagelist "remmina" "remmina-plugin-vnc"
 {{- end }}
