--- a/.chezmoiignore.tmpl
+++ b/.chezmoiignore.tmpl
@@ -79,6 +79,7 @@
 {{ if not .work -}}
 /.aws/config
 /.chezmoiscripts/ip-route.sh
+/.local/bin/appctl
 /.local/bin/circleci
 /.local/bin/jira
 /.local/bin/latticectl
