--- a/.chezmoiscripts/run_onchange_after_10_aptfile.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_10_aptfile.sh.tmpl
@@ -44,7 +44,7 @@ package "vim"
 package "xclip"
 
 # Hardware / Kernel
-{{ if eq "24.04" .chezmoi.osRelease.versionID -}}
+{{ if le .chezmoi.osRelease.versionID "24.04" -}}
 package "linux-generic-hwe-{{ .chezmoi.osRelease.versionID }}"
 {{ end -}}
 {{ if and (eq (output "cat" "/sys/devices/virtual/dmi/id/sys_vendor" | trim) "Dell Inc.") (eq (output "cat" "/sys/devices/virtual/dmi/id/product_name" | trim) "Precision 5680") -}}
