--- a/.chezmoiscripts/run_onchange_after_50_virtualenv.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_50_virtualenv.sh.tmpl
@@ -10,6 +10,9 @@ set -o pipefail
 
 {{ include "shell/environment/path.sh" }}
 test -d .venv/bin || python3 -m venv .venv
+pip --version
+pip install --upgrade pip
+pip --version
 command -v pip-sync &>/dev/null || pip install --constraint .venv/requirements.in --quiet pip-tools
 pip-compile --upgrade --output-file .venv/requirements.txt --config .config/pip-tools.toml .venv/requirements.in
 pip-sync --config .config/pip-tools.toml .venv/requirements.txt
