--- a/dot_venv/requirements.in.tmpl
+++ b/dot_venv/requirements.in.tmpl
@@ -1,7 +1,7 @@
 ansible
 ansible-lint
 {{ if .personal -}}
-cc2538 @ git+https://github.com/JelmerT/cc2538-bsl
+cc2538-bsl @ git+https://github.com/JelmerT/cc2538-bsl
 esphome
 esptool
 {{- end }}
