--- a/dot_local/exact_bin/executable_appctl.tmpl
+++ b/dot_local/exact_bin/executable_appctl.tmpl
@@ -1,3 +1,6 @@
 {{- /* TODO: Use a regular external after twpayne/chezmoi#3724 */ -}}
-{{- $version := output "gh" "--repo=ghe.anduril.dev/platform/appctl" "release" "view" "--json=name" "--template={{ .name }}" -}}
-{{- output "sh" "-c" (printf "gh --repo=ghe.anduril.dev/platform/appctl release download --output=- --pattern=%s %s | tar --extract --to-stdout --gunzip appctl" (printf "appctl_%s_%s.tar.gz" .chezmoi.os .chezmoi.arch) $version) -}}
+{{- $repo := "ghe.anduril.dev/platform/appctl" -}}
+{{- $version := output "gh" "release" (printf "--repo=%s" $repo) "view" "--json=name" "--template={{ .name }}" -}}
+{{- $archive := (printf "appctl_%s_%s.tar.gz" .chezmoi.os .chezmoi.arch) -}}
+{{- $file := "appctl" -}}
+{{- output "sh" "-c" (printf "gh release --repo=%s download --output=- --pattern=%s %s | tar --extract --to-stdout --gunzip %s" $repo $archive $version $file) -}}
