Move Kube config to `~/.config/kube/config`

--- a/.chezmoiignore.tmpl
+++ b/.chezmoiignore.tmpl
@@ -79,7 +79,7 @@
 {{ if not .work -}}
 /.aws/config
 /.chezmoiscripts/ip-route.sh
-/.config/kube/config.src.d/work
+/.config/kube/config
 /.local/bin/appctl
 /.local/bin/circleci
 /.local/bin/jira
