--- a/.chezmoiscripts/run_onchange_after_10_aptfile.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_10_aptfile.sh.tmpl
@@ -17,12 +17,15 @@ apt_repository "helm" "https://baltocdn.com/helm/stable/debian/" "all main" "" "
 {{ if .work -}}
 apt_repository "jfrog" "https://releases.jfrog.io/artifactory/jfrog-debs" "focal contrib" "" "https://releases.jfrog.io/artifactory/jfrog-gpg-public/jfrog_public_gpg.key"
 {{- end }}
-apt_repository "kubernetes" "https://pkgs.k8s.io/core:/stable:/v1.29/deb/" "/" "" "https://pkgs.k8s.io/core:/stable:/v1.29/deb/Release.key"
+apt_repository "kubernetes" "https://pkgs.k8s.io/core:/stable:/v1.32/deb/" "/" "" "https://pkgs.k8s.io/core:/stable:/v1.32/deb/Release.key"
 apt_repository "speedtest" "https://packagecloud.io/ookla/speedtest-cli/ubuntu" "jammy main" "" "https://packagecloud.io/ookla/speedtest-cli/gpgkey"
 {{ if .work -}}
 apt_repository "teleport" "https://apt.releases.teleport.dev/ubuntu" "{{ .chezmoi.osRelease.ubuntuCodename }} stable/v14" "" "https://apt.releases.teleport.dev/gpg"
 {{- end }}
 apt_repository "vscode" "https://packages.microsoft.com/repos/code" "stable main" "amd64,arm64,armhf" "https://packages.microsoft.com/keys/microsoft.asc"
+{{ if .work -}}
+apt_repository "zoom" "https://mirror.mwt.me/zoom/deb" "any main" "amd64" "https://mirror.mwt.me/zoom/gpgkey"
+{{- end }}
 
 # Development
 package "code"
@@ -99,9 +102,15 @@ packagelist "remmina" "remmina-plugin-vnc"
 {{- end }}
 package "rename"
 package "retry"
+{{ if .work -}}
+package "slack"
+{{- end }}
 package "tree"
 {{ if .personal -}}
 package "vlc"
 {{- end }}
 package "wget"
 packagelist "yubikey-manager" "yubikey-manager-qt" "pamu2fcfg"
+{{ if .work -}}
+package "zoom"
+{{- end }}
