--- a/.chezmoiignore.tmpl
+++ b/.chezmoiignore.tmpl
@@ -84,6 +84,7 @@
 /.local/bin/circleci
 /.local/bin/jira
 /.local/bin/latticectl
+/.local/bin/nix-installer
 /.local/bin/sieclient
 /.ssh/conf.d/lattice.conf
 /.ssh/conf.d/teleport.conf
