--- a/.chezmoiignore.tmpl
+++ b/.chezmoiignore.tmpl
@@ -78,8 +78,10 @@
 
 {{ if not .work -}}
 /.aws/config
+/.chezmoiscripts/50_nix.sh
 /.chezmoiscripts/ip-route.sh
 /.config/kube/config
+/.config/nix
 /.local/bin/appctl
 /.local/bin/circleci
 /.local/bin/jira
