--- a/.chezmoiscripts/run_onchange_after_10_aptfile.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_10_aptfile.sh.tmpl
@@ -64,7 +64,7 @@ packagelist "libcairo2-dev" "libgirepository1.0-dev" # build dependencies for `p
 
 # Networking
 {{ if .personal -}}
-packagelist "nfs-common" "smbclient"
+packagelist "cifs-utils" "nfs-common" "smbclient"
 {{- end }}
 package "nmap"
 package "speedtest-cli"
